# Desktop_cpp

./: .gitignore  Blueprint.json  CMakeLists.txt  TODO.txt
Source/: Appmain.cpp  Commontypes.hpp  Configuration.hpp  Global.hpp  Stdinclude.hpp
Source/Application/: Application.hpp  Element.cpp  onInit.cpp  onInput.cpp  onRender.cpp
Source/Assets/: Accountpanel.cpp  Assets.hpp  Contentview.cpp  Emailbox.cpp  Github.cpp  Google.cpp  Logintext.cpp  MenubackgroundPNG.cpp  Notificationpanel.cpp  Searchbar.cpp  Sidebar.cpp  Socialpanel.cpp  Statusbox.cpp  Toolbar.cpp  Twitter.cpp
Source/Assets/Blobs/: Brigmore_Bold.cpp  Brigmore_Bold_Oblique.cpp  Brigmore_Regular.cpp  Brigmore_Regular_Oblique.cpp  Brigmore_Thin.cpp  Brigmore_Thin_Oblique.cpp  Bronco_InLine.cpp  Bronco_Regular.cpp  Cormier_Double.cpp  Cormier_Regular.cpp  Cormier_Rough.cpp  Fontaine_Extrude.cpp  Fontaine_Regular.cpp  Fontaine_Rough.cpp  Ironclad_Bold.cpp  Ironclad_Light.cpp  Ironclad_Regular.cpp  Metropolis_Ornaments.cpp  Metropolis_Regular.cpp  NavigationBG.cpp  Navleft.cpp  Navright.cpp
Source/Backend/: Composition.cpp  Compositioning.cpp  Input.cpp  Inputhandling.cpp  Rendering.cpp  Window.cpp  Windowmanagement.cpp
Source/Configuration/: Buildsettings.hpp  Definitions.hpp  Macros.hpp
Source/Corecomponents/: Input.hpp  Inputprocessing.cpp  Menuelement.cpp  Rendering.hpp  Renderingbackend.cpp
Source/Engine/: AYAEngine.hpp  Backendrenderer.cpp  Compositionmanagement.cpp  Engine.hpp  Frameprocessing.cpp  Menu.cpp  Menucompositing.cpp  Processframe.cpp  Rendering.cpp  Userinput.cpp  Utility.cpp  Window.cpp  Windowmanagement.cpp
Source/Graphicsbackend/: Graphics.hpp  Shader.cpp  Texture.cpp
Source/Interface/: Contentbackground.cpp  Navigationbar.cpp  Scenemanagement.cpp  Toolbar.cpp
Source/Menu/: Assets.hpp  Loginmenu.cpp  Loginwindow.cpp  Mainmenu.cpp  Mainmenu_old.cpp  Mainwindow.cpp  Sidebar.cpp  Toolbar.cpp
Source/Menu/Assets/: Closeicon.cpp  Emailprompt.cpp  Github.cpp  Google.cpp  Longline.cpp  Offlinetext.cpp  Registertext.cpp  Settingsicon.cpp  Shortline.cpp  SidebarBG.cpp  Signintext.cpp  Twitter.cpp
Source/Menucomponents/: Borders.cpp  Components.hpp  Devconsole.cpp  Loginmenu.cpp  Sidebar.cpp  Toolbar.cpp
Source/Menudata/: MenuBG.hpp
Source/Utilities/: Archive.hpp  Base64.hpp  FNV1Hash.hpp  Logging.hpp  Variadicstring.hpp
Source/Utility/: Base64.hpp  Bitmap.hpp  FNV1Hash.hpp  Logfile.hpp  Variadicstring.hpp
